--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<h1>Test<h1>
-<script>
-    fetch('https://api.github.com/repos/iconsumeplutonium/CSE-160/contents/')
-        .then(response => response.json())
-        .then(data => {
-        let html = '';
-        for(let file of data) {
-            html += `<a href="${file.path}">${file.name}</a><br>`;
-        }
-        document.body.innerHTML = html;
-    });
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Stuff</title>
+</head>
+<body>
+    <h1>My Stuff</h1>
+    <ul>
+        <li><a href="asgn0/asg0.html">Assignment 0: Vector Library</a></li>
+    </ul>
+</body>
+</html>
