add asgn1 to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>My Stuff</h1>
     <ul>
         <li><a href="asgn0/asg0.html">Assignment 0: Vector Library</a></li>
+        <li><a href="asgn1/asg1.html">Assignment 1: Painting</a></li>
     </ul>
 </body>
 </html>
