add star destroyer drawing and toggle

--- a/asgn1/asgn1.html
+++ b/asgn1/asgn1.html
@@ -18,6 +18,8 @@
         <script src="Point.js"></script>
         <script src="Triangle.js"></script>
         <script src="Circle.js"></script>
+        <script src="ScaleneTriangle.js"></script>
+        <script src="Drawing.js"></script>
 
         <br>
         <button onclick="clearCanvas()">Clear Canvas</button>
@@ -42,5 +44,9 @@
         <input type="range" min="1" max="50" value="25" id="shapeSizeSlider">
         (Circles) Segment Count:
         <input type="range" min="1" max="14" value="14" id="segmentSlider">
+
+        <br><br><br>
+        Toggle Drawing:
+        <input type="checkbox" id="showDrawing" value=0>
     </body>
 </html>
