add images, start writing features.html

--- a/asgn1/asgn1.html
+++ b/asgn1/asgn1.html
@@ -46,7 +46,9 @@
         <input type="range" min="1" max="14" value="14" id="segmentSlider">
 
         <br><br><br>
-        Toggle Drawing:
-        <input type="checkbox" id="showDrawing" value=0>
+        Drawing: <br>
+        <button onclick="showDrawing()">Show Drawing</button>
+        Show Triangles in Drawing
+        <input type="checkbox" id="toggleDrawingColors" onclick="toggleColor()">
     </body>
 </html>
