add more images, add new feature for 'awesomeness' category (custom triangles), update features.html

--- a/asgn1/asgn1.html
+++ b/asgn1/asgn1.html
@@ -28,6 +28,7 @@
         <button onclick="SetDrawMode(1)">Points</button>
         <button onclick="SetDrawMode(3)">Triangles</button>
         <button onclick="SetDrawMode(4)">Circles</button>
+        <button onclick="SetDrawMode(2)">Custom Triangles</button>
 
         <br><br>
         Shape Color:
@@ -50,5 +51,10 @@
         <button onclick="showDrawing()">Show Drawing</button>
         Show Triangles in Drawing
         <input type="checkbox" id="toggleDrawingColors" onclick="toggleColor()">
+
+        <br><br><br>
+        Custom Triangles:
+        <p id="selectedPoints">Points Selected: None</p>
+
     </body>
 </html>
