--- a/asgn1/features.html
+++ b/asgn1/features.html
@@ -3,9 +3,10 @@ Assignment 1 <br> <br>
 <a href="asgn1.html">Link to asgn1.html</a> <br>
 <a href="https://iconsumeplutonium.github.io/CSE-160/asgn1/asgn1.html">Link to live hosted version on Github Pages</a> <br> <br>
 
-<b>Notes to Grader</b><br>
-So for the drawing we're supposed to do, I actually didn't do it on paper at all. However, I believe the method I used to make the drawing <br>
-makes up for it, and I think should count for the Awesomeness category. <br> <br>
+<h3>Notes to Grader</h3>
+<p>
+So for the drawing we're supposed to do, I actually didn't do it on paper at all. However, I believe the method I used to make the drawing
+makes up for it. I also added an extra feature for Awesomeness (described at the near the bottom of this page) <br> <br>
 
 So firstly, I decided I wanted to draw out the side profile of the Imperial I class Star Destroyer, so I scoured Google until I found an image I liked. <br>
 
@@ -67,4 +68,24 @@ In addition to adding a button to display my Star Destroyer on the screen, I als
 
 <br><br>
 
-I hope this satisfies both the drawing and the Awesomeness requirement. Thank you for reading this long file :)
+I hope this satisfies the drawing requirement.
+
+<br><br><br>
+
+
+<h3>Awesomeness Feature</h3> 
+<p>
+I added a new drawing tool to the page, which is called "Custom Triangles." I used my new <code>ScaleneTriangle.js</code> class in order to implement this. Essentially, when this mode is selected, the user is able to click on any three points on the canvas and draw a triangle between those three points.
+The points that the user has selected are visible at the bottom of the page in the "Custom Triangles" section. 
+
+<br><br> 
+<figure>
+    <img src="images/two selected.png" style="width:400">
+    <figcaption>Usage of the Custom Triangles feature.</figcaption> <br><br>
+    <img src="images/triangle drawn.png" style="width:400">
+    <figcaption>
+        The triangle appears once the user has selected the third coordinate. The list of <br>
+        points at the bottom has been cleared now that the triangle has been drawn.
+    </figcaption>    
+</figure> 
+<br><br>
