update main page

--- a/asgn1/asgn1.html
+++ b/asgn1/asgn1.html
@@ -56,5 +56,11 @@
         Custom Triangles:
         <p id="selectedPoints">Points Selected: None</p>
 
+        <img src="images/star destroyer with outline.png" width="30%"> <br>
+        <img src="images/star destroyer with green triangles.png" width="30%"> <br>
+        <img src="images/isd tris.png" width="30%"> <br>
+        <img src="images/desmos.png" width="30%">
+
+
     </body>
 </html>
