add mention of lighting

--- a/asgn5a/features.html
+++ b/asgn5a/features.html
@@ -21,4 +21,6 @@ the exact angle that the TIE Interceptor needs to be at in order at each part of
 giving the illusion that it is rotating perfectly along the circle. <br>
 
 The Interceptor also has three possible paths it can take: It can go at y=-1 (near the bottom of the screen), y=0 (along the middle of the screen), or y=1 (along the top of the screen). It randomly rolls a number between 0 and 1, multiplies it by 2, and subtracts 1 <br>
-(which puts it into the range -1 to 1). Then I round it to the nearest integer (which is -1, 0, or 1) which becomes the new y coordinate for that path. 
+(which puts it into the range -1 to 1). Then I round it to the nearest integer (which is -1, 0, or 1) which becomes the new y coordinate for that path. <br><br>
+
+Although it's not that intense, there is a light source in the scene at (0, 1, 4). 
