--- a/asgn2/asgn2.html
+++ b/asgn2/asgn2.html
@@ -72,7 +72,9 @@
                 </select> <button id ="crowbarAnimationButton" onclick="requestAnimationFrame(function(time) {beginAnimation(time, 'crowbar')})">Crowbar Animation</button>
                 <br><br><br><br><br>
                 <button onclick="resetAll()">Reset All Sliders</button>
-
+                
+                <br> Rotate model with cursor:
+                <input type="checkbox" id="enableRotation">
 
                 <!-- <br><br><br><br><br><br><br><br><br><br><br><br>
                 random debug stuff (remove later) <br>
@@ -135,6 +137,7 @@
             </div>
         </div>
 
+        <p id="fps"></p>
         
         <script src="lib/webgl-utils.js"></script>
         <script src="lib/webgl-debug.js"></script>
