lower crowbar audio, add valve intro sound when switching to walking animation

--- a/asgn2/asgn2.html
+++ b/asgn2/asgn2.html
@@ -69,7 +69,8 @@
                 <select id="animationSelect">
                     <option value="none">None</option>
                     <option value="walk">Walking</option>
-                </select> <button id ="crowbarAnimationButton" onclick="requestAnimationFrame(function(time) {beginAnimation(time, 'crowbar')})">Crowbar Animation</button>
+                </select> <br>
+                <button id ="crowbarAnimationButton" onclick="requestAnimationFrame(function(time) {beginAnimation(time, 'crowbar')})">Crowbar Animation</button> (Can also be triggered by shift-left clicking on canvas) <br>
                 <br><br><br><br><br>
                 <button onclick="resetAll()">Reset All Sliders</button>
                 
