--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li><a href="asgn1/asgn1.html">Assignment 1: Painting</a></li>
         <li><a href="asgn2/asgn2.html">Assignment 2: Blocky Animal</a></li>
         <li><a href="asgn3a/asgn3a.html">Assignment 3A: Blocky World (part 1)</a></li>
+        <li><a href="asgn3b/asgn3b.html">Assignment 3B: Blocky World (part 2)</a></li>
         <li><a href="asgn5a/asgn5a.html">Assignment 5A</a></li>
     </ul>
 </body>
