--- a/asgn3b/asgn3b.html
+++ b/asgn3b/asgn3b.html
@@ -18,7 +18,7 @@
     <body onload="main()">
         <div class="container">
             <div class="canvas-container">
-                <canvas id="webgl" width="1280" height="720">
+                <canvas id="webgl" width="640" height="480">
                     Please use the browser that supports canvas.
                 </canvas>
             </div>
@@ -61,11 +61,14 @@
         <script src="lib/webgl-debug.js"></script>
         <script src="lib/cuon-utils.js"></script>
         <script src="lib/cuon-matrix.js"></script>
+        <!-- <script src="lib/perlin.js"></script> -->
+        <script src="lib/Noise.js"></script> -->
+        <script src='http://joeiddon.github.io/perlin/perlin.js'></script>
         <script src="asgn3b.js"></script>
         <script src="Cube.js"></script>
         <script src="Triangle.js"></script>
         <script src="Camera.js"></script>
-        <script src="https://raw.githubusercontent.com/josephg/noisejs/master/perlin.js"></script> <br><br>
+        <br><br>
 
         <!-- https://github.com/josephg/noisejs -->
         
