add ability to place blocks, wrote function to support deleting blocks, moved player control functions and code to new file

--- a/asgn3b/asgn3b.html
+++ b/asgn3b/asgn3b.html
@@ -65,6 +65,7 @@
         <script src="lib/Noise.js"></script>
         <script src='lib/perlin.js'></script>
         <script src="TextureAtlasManager.js"></script>
+        <script src="PlayerController.js"></script>
         <script src="asgn3b.js"></script>
         <script src="Cube.js"></script>
         <script src="Triangle.js"></script>
