--- a/asgn3b/asgn3b.html
+++ b/asgn3b/asgn3b.html
@@ -57,6 +57,8 @@
 
         <p id="fps"></p>
         <p id="selectedBlock"></p>
+        <p id="worldCoords"></p>
+        <p id="chunkCoords"></p>
         
         <script src="lib/webgl-utils.js"></script>
         <script src="lib/webgl-debug.js"></script>
@@ -67,6 +69,7 @@
         <script src='lib/perlin.js'></script>
         <script src="TextureAtlasManager.js"></script>
         <script src="PlayerController.js"></script>
+        <script src="InfiniteTerrain.js"></script>
         <script src="asgn3b.js"></script>
         <script src="Cube.js"></script>
         <script src="Triangle.js"></script>
