forgot to push new texture atlas

--- a/asgn3b/asgn3b.html
+++ b/asgn3b/asgn3b.html
@@ -70,10 +70,24 @@
                     <p style="margin-top: 1; margin-bottom: 0; padding: 0;">Chunk coordinates:</p>
                     <p style="margin: 0; padding: 0;" id="chunkCoords"></p>
                 </div>
-                <div>
+                <div style="margin-bottom: 20px;">
                     <p style="margin-top: 1; margin-bottom: 0; padding: 0;">Direction:</p>
                     <p style="margin: 0; padding: 0;" id="compass"></p>
                 </div>
+                <div>
+                    <p style="margin: 0; padding: 0;">Controls</p>
+                    <ul>
+                        <li style="margin: 0; padding: 0; font-size: 15px;">WASD to move around</li>
+                        <li style="margin: 0; padding: 0; font-size: 15px;">Space to move up</li>
+                        <li style="margin: 0; padding: 0; font-size: 15px;">Left shift to move down</li>
+                        <li style="margin: 0; padding: 0; font-size: 15px;">Mouse to look</li>
+                        <li style="margin: 0; padding: 0; font-size: 15px;">Scrollwheel to select block</li>
+                        <li style="margin: 0; padding: 0; font-size: 15px;">Left click to break block at cursor</li>
+                        <li style="margin: 0; padding: 0; font-size: 15px;">Right click to place selected block at cursor</li>
+                    </ul>
+                </div>
+
+
             </div>
         </div>
         
