--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="asgn3a/asgn3a.html">Assignment 3A: Blocky World (part 1)</a></li>
         <li><a href="asgn3b/asgn3b.html">Assignment 3B: Blocky World (part 2)</a></li>
         <li><a href="asgn5a/asgn5a.html">Assignment 5A</a></li>
+        <li><a href="asgn5b/asgn5b.html">Assignment 5B</a></li>
     </ul>
 </body>
 </html>
